syntax = "proto3";

package payment;

service PaymentService {
  rpc CreatePayment (CreatePaymentRequest) returns (PaymentResponse);
  rpc GetPayment (GetPaymentRequest) returns (PaymentResponse);
  rpc RefundPayment (RefundPaymentRequest) returns (PaymentResponse);
}

message CreatePaymentRequest {
  string orderId = 1;
  string customerId = 2;
  double amount = 3;
  string paymentMethod = 4;
  string transactionId = 5;
}

message GetPaymentRequest {
  string paymentId = 1;
}

message RefundPaymentRequest {
  string paymentId = 1;
}

message PaymentResponse {
  string paymentId = 1;
  string orderId = 2;
  string customerId = 3;
  double amount = 4;
  string paymentMethod = 5;
  string status = 6;
  string transactionId = 7;
  string createdAt = 8;
}
